[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>", "Param Pal Singh <singhparampal97@gmail.com"]
edition = "2018"
name = "manning-lp-async-rust-project"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "3.1.8", features = ["derive"]}
yahoo_finance_api = { version = "1.1" }
tokio = { version = "1", features= ["full"]}
time = { version="0.3" }
async-trait = { version = "0.1" }
